adding sd card mmc init code to durga

--- a/src/14-bootloader-durga/Makefile
+++ b/src/14-bootloader-durga/Makefile
@@ -7,9 +7,10 @@ all :
 	$(CROSS)gcc $(CFLAGS) -c durga.c -o durga.o
 	$(CROSS)gcc $(CFLAGS) -c ../common/utils.c -o utils.o
 	$(CROSS)gcc $(CFLAGS) -c ../common/bbb_hal.c -o bbb_hal.o
-	$(CROSS)ld -o mlo -T memmap start.o bbb_hal.o durga.o utils.o
+	$(CROSS)gcc $(CFLAGS) -c ../common/bbb_hal_mmc.c -o bbb_hal_mmc.o
+	$(CROSS)ld -o mlo -T memmap start.o bbb_hal.o bbb_hal_mmc.o durga.o utils.o
 	$(CROSS)objdump --disassemble-zeroes -M reg-names-raw -D mlo > mlo.obj
 	$(CROSS)objcopy mlo mlo.bin -O binary
 
 clean :
-	@/bin/rm *.o *.obj *.bin *.su mlo MLO *.out
+	@/bin/rm -v *.o *.obj *.bin *.su mlo MLO
